# lib/api-spec/openapi.yaml
@@ -595,6 +595,8 @@ components:
           type: string
         logoUrl:
           type: ["string", "null"]
+        heroVideoUrl:
+          type: ["string", "null"]
         primaryColor:
           type: string
         secondaryColor:
@@ -624,6 +626,8 @@ components:
         shopName:
           type: string
         logoUrl:
+          type: ["string", "null"]
+        heroVideoUrl:
           type: ["string", "null"]
         primaryColor:
           type: string
